--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    
     <section>
            <div class="container mt-5">
-        <h2 class="text uppercase">Welcome To Supreme Feast </h2>
+        <h2 class="text uppercase text-center">Welcome To Supreme Feast </h2>
     </div>
     <div class="container mt-3">
         <div class=" col-6 mx-auto mt-3">
@@ -51,10 +51,10 @@
         </div>
     </div>
      
-    <div class="container mt-3">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-6 mx-auto">
-    <h3><strong>About Us</strong></h3>
+            <div class="col-12 mx-auto">
+    <h3 class="text-center"><strong>About Us</strong></h3>
     <p class="text-center h3-text">Supreme Feast is a place for friends and family to dine together and enjoy our delious tasty meals. 
         We serve a wide range of meals, drinks, deserts,starters and gluten free
        meals for vegetarians all of this is in our menu page. We also have a contact page if you like to 
