--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <header>
          <h1 class="text-uppercase">Supreme Feast!</h1> 
           
-         <ul class="nav justify-content-end ">
+         <ul class="nav justify-content-center ">
                 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
