--- a/menu.html
+++ b/menu.html
@@ -21,16 +21,16 @@
     <header>
         <h1 class="text-uppercase">Supreme Feast!</h1> 
          
-        <ul class="nav justify-content-end ">
+        <ul class="nav justify-content-center ">
                
            <li class="nav-item">
-             <a class="nav-link active" aria-current="page" href="#">Home</a>
+             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">Menu</a>
+             <a class="nav-link" href="menu.html">Menu</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="#">Contact Us</a>
+             <a class="nav-link" href="contact.html">Contact Us</a>
            </li>
            </ul>
             <nav class="navbar-light bg-warning text-center">
