--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
        </div>
     </div>
-    <div class="container 2">
+    <div class="container">
         <div class="row">
         <div class=" col-4 mx-auto mt-3">
            <img src="https://img.hellofresh.com/f_auto,fl_lossy,q_auto,w_1200/hellofresh_s3/image/peri-peri-chicken-burger-and-chips-392035f6-e371ecca.jpg" 
