--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="container mt-3">
         <div class=" col-6 mx-auto mt-3">
-           <img src="https://i1.wp.com/coalshed-restaurant.co.uk/london/app/app-uploads/sites/2/2022/05/cslondonrestaurant.jpg?ssl=1&w=2500&quality=85" 
+           <img src="https://c.pxhere.com/photos/2f/68/restaurant_people_eating_socializing_socialize_dinner_table_celebration-742585.jpg!d" srcset="https://c.pxhere.com/photos/2f/68/restaurant_people_eating_socializing_socialize_dinner_table_celebration-742585.jpg!d" alt="table, group, people, socializing, restaurant, bar, celebration, meal, sitting, together, lifestyle, eat, eating, happy, dining, dating, drinking, dinner, dine, sense, socialize, Free Images In PxHere"
            class="img-thumbnail center" alt="Image 1">
 
         </div>
@@ -67,12 +67,12 @@
     <div class="container">
         <div class="row">
         <div class=" col-4 mx-auto mt-3">
-           <img src="https://img.hellofresh.com/f_auto,fl_lossy,q_auto,w_1200/hellofresh_s3/image/peri-peri-chicken-burger-and-chips-392035f6-e371ecca.jpg" 
+           <img src="https://c.pxhere.com/photos/ef/55/food_meal_french_fries_dinner_delicious_lunch_burger-603519.jpg!d" 
            class="img-thumbnail rounded float-start" alt="Image 2">
          </div>
         
          <div class="col-4 mx-auto mt-3">
-            <img src="https://static.wixstatic.com/media/dc2d26_4ff2b557ebc442939a8ff93b1bb8b874~mv2.jpg/v1/fill/w_600,h_442,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/dc2d26_4ff2b557ebc442939a8ff93b1bb8b874~mv2.jpg" 
+            <img src="https://c.pxhere.com/photos/f2/29/kitchen_work_restaurant_cook_chef_professional_food_preparation-1327589.jpg!d" 
             class="img-thumbnail rounded float-end" alt="Image 3">
        
        </div>
