--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
          </div>
          <div class="mb-3 row">
             <div class="col-12 text-center mt-5">
-                <p class="detail-text"><strong>To book and reeserve a table put your details and we'll get back to you very shortly</strong></p>
+                <p class="detail-text"><strong>To book and reserve a table put your details and we'll get back to you very shortly</strong></p>
             </div>
          </div>
          
