--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
        </div>
     </div>
   </div>
+     <div>
+      <h5 class="text-center">Our Address</h5>
+      <p class="text-center">32 Sydenham Road</p>
+      <p class="text-center">Sydenham,London SE26 3LE</p>
+     </div>
+
+
 </section>
     
 <footer class="container-fluid text-center mt-5">
