--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <p class="detail-text"><strong>To book and reserve a table put your details and we'll get back to you very shortly</strong></p>
             </div>
          </div>
-          <form class="row g-3" >
+          <form class="row g-3 signup-form " method="POST" action="https://formdump.codeinstitute.net/">
                 <div class="col-sm-5 position-relative mx-auto ">
                   <label for="fname" class="form-label"><strong>First name *</strong></label>
                   <input type="text" class="form-control" id="fname" required>
@@ -78,7 +78,7 @@
                   <div class="mb-3 mb-3 col-sm-5 col-md-6 mx-auto ">
                     <label for="exampleFormControlTextarea1" class="form-label"></label>
                    
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Write your message here for any speical requirements*"></textarea>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Write your message here for any speical requirements"></textarea>
                     </div>
                   </div>
                  
