added comments to html files

--- a/menu.html
+++ b/menu.html
@@ -16,8 +16,10 @@
 </head>
 <body>
    <header>
+            <!-- Main Heading-->  
         <h1 class="text-uppercase">Supreme Feast!</h1> 
-         <ul class="nav justify-content-center ">
+                <!-- Navbar-->  
+        <ul class="nav justify-content-center ">
       <li class="nav-item">
              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
            </li>
@@ -29,7 +31,8 @@
            </li>
            </ul>
             <nav class="navbar-light bg-warning text-center">
-           <div class="container-fluid">
+                  <!--Menu section-->  
+              <div class="container-fluid">
            <h2 class="menu-title mt-5 mx-auto">Menu</h2>
           </div>
         </nav>
@@ -303,6 +306,7 @@ class="card-img-top img-thumbnail-main" alt="...">
     </div>
   </div>
 </section>
+   <!-- Footer section-->  
 <footer class="container-fluid text-center mt-5">
   <div class="row">
       <div class="col-sm-4">
