Descrptive alt tags updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Main Heading -->
     <h1 class="text-uppercase">Supreme Feast!</h1>
      <div class="container-fluid">
-      <!-- Navbar section-->
+      <!-- Navigation bar section-->
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
