--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
   <header>
     <!-- Main Heading-->
     <h1 class="text-uppercase">Supreme Feast!</h1>
-    <!-- Navbar-->
+    <!-- Navigation bar-->
     <ul class="nav justify-content-center ">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -50,7 +50,7 @@
         <div class="card">
           <img
             src="https://images.pexels.com/photos/1618888/pexels-photo-1618888.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-            class=" img-thumbnail-main" alt="...">
+            class=" img-thumbnail-main" alt="Image of Tomato Soup">
           <div class="card-body">
             <h5 class="card-text">Tomato Soup</h5>
             <p class="card-text">£3.25</p>
@@ -59,7 +59,7 @@
         <div class="card">
           <img
             src="https://images.pexels.com/photos/5639421/pexels-photo-5639421.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-            class=" img-thumbnail-main" alt="...">
+            class=" img-thumbnail-main" alt="Image of Sandwiches with Tomatoes and Olives">
           <div class="card-body">
             <h5 class="card-text">Sandwiches with Tomatoes and Olives</h5>
             <p class="card-text">£3.25</p>
@@ -67,7 +67,7 @@
         </div>
         <div class="card">
           <img src="https://cdn.pixabay.com/photo/2017/08/04/14/33/food-2580200_960_720.jpg" class=" img-thumbnail-main"
-            alt="...">
+            alt="Image of Tortilla chips & Dip">
           <div class="card-body">
             <h5 class="card-text">Tortilla chips & Dip</h5>
             <p class="card-text">£3.25</p>
@@ -86,7 +86,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/1639557/pexels-photo-1639557.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Burger">
         <div class="card-body">
           <h5 class="card-text">Burgers</h5>
           <p class="card-text">Hamburger £7.20 </p>
@@ -98,7 +98,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/60616/fried-chicken-chicken-fried-crunchy-60616.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of fried Chicken">
         <div class="card-body">
           <h5 class="card-text">Chicken</h5>
           <p class="card-text">Grilled Chicken £8.25 </p>
@@ -110,7 +110,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/2619970/pexels-photo-2619970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Pizza">
         <div class="card-body">
           <h5 class="card-text">Pizza</h5>
           <p class="card-text">Margherita £8.25</p>
@@ -122,7 +122,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/1527603/pexels-photo-1527603.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Pasta">
         <div class="card-body">
           <h5 class="card-text">Pasta</h5>
           <p class="card-text">Spaghetti Bolognese £6.20</p>
@@ -134,7 +134,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/12737663/pexels-photo-12737663.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Wraps">
         <div class="card-body">
           <h5 class="card-text">Wraps</h5>
           <p class="card-text">Chicken Caesar Wrap £6.50</p>
@@ -155,7 +155,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/1583891/pexels-photo-1583891.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Chips">
         <div class="card-body">
           <h5 class="card-text">Chips </h5>
           <p class="card-text"> £4.50 </p>
@@ -164,7 +164,7 @@
       <div class="card">
         <img
           src="https://c.pxhere.com/photos/b0/88/pumpkin_hokkaido_plum_sauce_vegetables_vegetarian_vegan_sage-1216434.jpg!d"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Wedges">
         <div class="card-body">
           <h5 class="card-text">Wedges</h5>
           <p class="card-text">£4.50
@@ -174,7 +174,7 @@
       <div class="card">
         <img
           src="https://c.pxhere.com/photos/ff/6b/corn_on_the_cob_vegetable_food_yellow_healthy_kernels_cooked_plate-689600.jpg!d"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Corn on the Cob">
         <div class="card-body">
           <h5 class="card-text">Corn on the Cob</h5>
           <p class="card-text">£3.45</p>
@@ -183,7 +183,7 @@
       <div class="card">
         <img
           src="https://c.pxhere.com/photos/cc/72/appetizer_background_bowl_cabbage_carrot_chopped_closeup_coleslaw-648647.jpg!d"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Coleslaw">
         <div class="card-body">
           <h5 class="card-text">Coleslaw</h5>
           <p class="card-text">£4.45</p>
@@ -192,7 +192,7 @@
       <div class="card">
         <img
           src="https://c.pxhere.com/photos/e0/e7/chana_masala_chole_masala_channay_chickpeas_vegetarian_indian_pakistani_cuisine-643959.jpg!d"
-          class="card-img-top h-100 img-thumbnail-main" alt="...">
+          class="card-img-top h-100 img-thumbnail-main" alt="Image of Baked Beans">
         <div class="card-body">
           <h5 class="card-text">Baked Beans</h5>
           <p class="card-text">£3.90</p>
@@ -210,7 +210,7 @@
       <div class="card">
         <img
           src="https://c.pxhere.com/photos/ea/83/ice_cream_sundae_raspberry_cups_vanilla_ice_cream_ice_dessert_cream_feasting_ice_cream_flavors-1019138.jpg!d"
-          class="card-img-top img-thumbnail-main" alt="...">
+          class="card-img-top img-thumbnail-main" alt="Image of Ice Cream">
         <div class="card-body">
           <h5 class="card-text">Ice Cream</h5>
           <p class="card-text">Vanilla £5.40</p>
@@ -224,7 +224,7 @@
       <div class="card">
         <img
           src="https://c.pxhere.com/photos/f3/01/cake_cheese_dessert_candy_delicious_suites_sweet_cheese_cake-837887.jpg!d"
-          class="card-img-top  img-thumbnail-main" alt="...">
+          class="card-img-top  img-thumbnail-main" alt="Image of Cheesecake">
         <div class="card-body">
           <h5 class="card-text">Cheesecake </h5>
           <p class="card-text">£5.20 </p>
@@ -232,7 +232,7 @@
       </div>
       <div class="card">
         <img src="https://c.pxhere.com/photos/87/6d/brownie_dessert_cake_sweet_delicious_brown_snack_bake-919684.jpg!d"
-          class="card-img-top  img-thumbnail-main" alt="...">
+          class="card-img-top  img-thumbnail-main" alt="Image of Chocolate Cake ">
         <div class="card-body">
           <h5 class="card-text">Chocolate Cake </h5>
           <p class="card-text">£4.95 </p>
@@ -240,7 +240,7 @@
       </div>
       <div class="card">
         <img src="https://cdn.pixabay.com/photo/2016/08/10/20/47/apple-pie-1584258_960_720.jpg"
-          class="card-img-top  img-thumbnail-main" alt="...">
+          class="card-img-top  img-thumbnail-main" alt="Image of Apple Pie">
         <div class="card-body">
           <h5 class="card-text">Apple Pie </h5>
           <p class="card-text">£5.90 </p>
@@ -248,7 +248,7 @@
       </div>
       <div class="card">
         <img src="https://c.pxhere.com/photos/60/97/tiramisu_chocolate_food_mousse_sweet_biscuit_dessert-1186009.jpg!d"
-          class="card-img-top img-thumbnail-main" alt="...">
+          class="card-img-top img-thumbnail-main" alt="Image of Tiramisu">
         <div class="card-body">
           <h5 class="card-text">Tiramisu </h5>
           <p class="card-text">£6.20 </p>
@@ -257,7 +257,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/3026810/pexels-photo-3026810.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top  img-thumbnail-main" alt="...">
+          class="card-img-top  img-thumbnail-main" alt="Image of chocolate Mousse">
         <div class="card-body">
           <h5 class="card-text">Mousse</h5>
           <p class="card-text">Chocolate £6.20 </p>
@@ -276,7 +276,7 @@
     <div class="card-group">
       <div class="card">
         <img src="https://c.pxhere.com/photos/d7/13/drink_soda_glass_thirst_beverage_refreshment_cup-968706.jpg!d"
-          class="card-img-top  img-thumbnail-main" alt="...">
+          class="card-img-top  img-thumbnail-main" alt="Image of coca cola in glass">
         <div class="card-body">
           <h5 class="card-text">Soft Drinks</h5>
           <p class="card-text">Coke £2.90</p>
@@ -291,7 +291,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/1672304/pexels-photo-1672304.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top img-thumbnail-main" alt="...">
+          class="card-img-top img-thumbnail-main" alt="Image of beer glass">
         <div class="card-body">
           <h5 class="card-text">Beer</h5>
           <p class="card-text">Heineken £3.90</p>
@@ -306,7 +306,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/105036/pexels-photo-105036.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top img-thumbnail-main" alt="...">
+          class="card-img-top img-thumbnail-main" alt="Image of cider bottles ">
         <div class="card-body">
           <h5 class="card-text">Cider</h5>
           <p class="card-text">Kopparberg Mixed Fruit £3.80</p>
@@ -320,7 +320,7 @@
       <div class="card">
         <img
           src="https://images.pexels.com/photos/2702805/pexels-photo-2702805.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          class="card-img-top img-thumbnail-main" alt="...">
+          class="card-img-top img-thumbnail-main" alt="Image of red wine">
         <div class="card-body">
           <h5 class="card-text">Wine</h5>
           <p class="card-text">Blossom Wine (red) £4.60</p>
