--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <header>
     <!--Main Heading -->
     <h1 class="text-uppercase">Supreme Feast!</h1>
-    <!-- Navbar section-->
+    <!-- Navigation bar section-->
     <ul class="nav justify-content-center ">
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
