--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
         <div class="col-md-6 mx-auto">
           <div class="position-relative">
             <img src="https://images.pexels.com/photos/262978/pexels-photo-262978.jpeg?auto=compress&cs=tinysrgb&w=1600"
-              class="img-fluid-contact img-thumbnail" alt="#">
+              class="img-fluid-contact img-thumbnail" alt="Waiter holding plate">
           </div>
         </div>
       </div>
